# BWINF2019_Round1

./: README.txt  rominos.py
Aufgabe1/src/: Base_Classes.py  Field.py  User_Interface.py  main.py
Aufgabe1/tex/: Blumenbeet.tex  Nummernmerker.tex
Aufgabe2/: main.go
Aufgabe2/tex/: Nummernmerker.tex
Aufgabe3/src/: functions.cpp  main_tele1.cpp  treenode.cpp
Aufgabe3/tex/: Telepaartie.tex
Aufgabe5/: rominos.py
Blumenbeet/tex/: documentation.tex
Telepaartie/: CMakeLists.txt  container.cpp  container.h  main.cpp
Telepaartie/src/: functions.cpp  functions.h  functions.hpp  main_tele1.cpp  main_tele2.cpp  treenode.cpp  treenode.h  treenode.hpp
Telepaartie/tex/: Telepaartie.tex
